altered transform from translate to scale to fix sizing issues on small screens

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -153,6 +153,7 @@ p{
 }
 
 iframe{
+    position: relative;
     width: 608px;
     height: 308px;
     margin-left: 10%;
@@ -220,67 +221,50 @@ iframe{
     .nav-links{
         width: 50%;
     }
-    .p-img{
-        display: none;
-    }
-    .bottom-img{
-        display: block;
-    }
 }
 @media screen and (max-width:768px){
 body{
     overflow-x: hidden;
 }
-}
-@media screen and (max-width:768px){
-    body{
-        overflow-x: hidden;
+
+    .d-ph-0{
+        display: none;
     }
 
     .nav-links{
-        position: absolute;;
-        right:0px;  
+        z-index: 5;
+        position: absolute;
+        right:0px;
         height:92vh;
         top: 8vh;
-        background-color:var(--orange-col);
-        display:none;
+        background-color: var(--orange-col);
+        display:flex;
         flex-direction: column;
         align-items: center;
         width: 75%;
-        transform:translateX(100%);
+        transform:scale(0);
         transition: transform 0.5s ease-in;
     }
     .nav-links li{
         opacity: 0;
     }
-    
     .burger{
         display: block;
     }
 }
 
-
 .nav-active{
-    transform:translateX(0%);
-    display: flex !important;
-}
-
-.background{
-    opacity: 0;
-}
-
-.gone{
-    display: none;
+    transform:scale(1);
 }
 
 @keyframes navLinkFade{
     from{
         opacity: 0;
-        transform:translateX(50px);
+        transform:scale(0)
     }
     to{
         opacity: 1;
-        transform:translateX(0px);
+        transform:scale(1)
     }
 }
 
@@ -292,4 +276,9 @@ body{
 }
 .toggle .line3{
     transform:rotate(45deg) translate(-5px, -6px);
+}
+
+.toggle .nav-links{
+    opacity: 0;
+    display: none !important;
 }
